--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.apk filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
+.fbx filter=lfs diff=lfs merge=lfs -text
+HumanHeart_FBX.fbx filter=lfs diff=lfs merge=lfs -text
